@@ -1,19 +1,23 @@
 """
 Common methods to deal with configs
 """
+import configparser
 import os.path
 from typing import Optional
 
-CONFIG_DIR = os.path.expanduser("~/.config/packaging_utils/")
+CONFIG_FILE = os.path.expanduser("~/.config/packaging_utils.ini")
 
 
-def read_config(config_name: str) -> Optional[str]:
+def read_config(section: str) -> Optional[str]:
     """
     Returns content of configuration file or None if it does not exist.
     """
-    config_path = os.path.join(CONFIG_DIR, '%s.conf' % config_name)
-    if os.path.exists(config_path):
-        with open(config_path, 'rt') as config_handle:
-            config = config_handle.read()
+    if not os.path.exists(CONFIG_FILE):
+        return
+
+    config = configparser.ConfigParser()
+    config.read(CONFIG_FILE)
+    if section:
+        return config[section]
+    else:
         return config
-    return None
